# MadEngine

./: .gitignore  CMakeLists.txt  Camera.h  Color.h  DelegateHandler.h  DevLog.md  Input.cpp  Input.h  LICENSE  Light.h  MadEngine.vcxproj  MadEngine.vcxproj.filters  Makefile  Mesh.h  OpenGL Awesomium.vcxproj  OpenGL Awesomium.vcxproj.filters  ReadMe.md  Scene.h  Setup MadEngine.txt  Todo.md  Tranform.h  main.cpp
CMake/: FindGLM.cmake
cmake/: FindAwesomium.cmake  FindGLEW.cmake  FindGLFW.cmake
resources/: OfficialTetra.blend  resources.rc
resources/TetraObject/: MadEngineTetra.mtl
src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Component.cpp  Component.h  Context.cpp  Context.h  Defines.h  DelegateHandler.h  Entity3D.cpp  Entity3D.h  FileIO.cpp  FileIO.h  Input.cpp  Input.h  Light.h  MadCore.cpp  MadCore.h  Material.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  Scene.h  Shader.h  Surface.cpp  Surface.h  Tranform.h  Transform.h  binding.h  main.cpp
src/Core/: Camera.cpp  Camera.h  Debug.h  Defines.h  Input.cpp  Input.h  Mesh.h
src/Graphics/: Light.h  Renderer.cpp
src/Input/: KeyBinding.h
src/common/: Color.cpp  Color.h  Matrix.h  String.h  Vector.h
src/components/: Light.h
src/core/: Component.cpp  Component.h  Context.cpp  Context.h  Entity.cpp  Entity.h  MadCore.cpp  MadCore.h  Scene.h  Transform.h
src/graphics/: Material.h  Renderer.h  Shader.h  Surface.h
src/graphics/renderer/: OpenglRenderer.cpp  OpenglRenderer.h
src/inputs/: Camera.cpp  Camera.h  DelegateHandler.h  Input.cpp  Input.h  binding.h
src/utilities/: Debug.h  FileIO.cpp
web/: MadEngine.css  MadEngine.html  server.bat
web/javascript/: MadEngine.js
